[tool.poetry]
name = "DexRoBot"
version = "0.1.0"
description = ""
authors = ["Iulian Onofrei <iulian.onofrei@yahoo.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "*"
peewee = "*"
peewee-migrate = "*"
python-telegram-bot = "12.8"
regex = "*"
requests = "*"
requests-cache = "*"

[tool.poetry.dev-dependencies]
fabric = "*"
invocations = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
